# finance

./: README.md  pyproject.toml
.cursor/rules/: application-context.mdc  self_improve.mdc  task_master.mdc  technical.mdc
src/: applicacion.py
src/app/: api.py
src/app/investments/application/: __init__.py  asset_holdings_cases.py  asset_prices_cases.py  assets_cases.py  benchmarks_cases.py
src/app/investments/infrastructure/: __init__.py  asset_holdings.py  asset_prices.py  assets.py  benchmarks.py
src/app/news/application/: __init__.py  news_sources_cases.py  newsletter_subscriptions_cases.py  saved_articles_cases.py
src/app/news/infrastructure/: __init__.py  news_sources.py  newsletter_subscriptions.py  saved_articles.py
src/app/subscriptions/application/: __init__.py  subscription_notifications_cases.py  subscription_payments_cases.py  subscriptions_cases.py
src/app/subscriptions/domain/: __init__.py
src/app/subscriptions/infrastructure/: __init__.py  subscription_notifications.py  subscription_payments.py  subscriptions.py
src/app/transactions/: routes.py
src/app/transactions/application/: __init__.py  transaction_files.py  transaction_types_cases.py  (+1 more)
src/core/: constants.py
src/core/aws/: s3.py
src/core/db/: __init__.py  dao.py  deps.py  exceptions.py  model.py  session.py
src/core/schema/: __init__.py  schema_base.py
src/core/types/: __init__.py  sentinels.py  sentinels.pyi  sqlalchemy.py
src/core/utils/: __init__.py  filters.py  helpers.py  serialization.py
src/settings/: __init__.py  api_settings.py  db_settings.py
(+58 files in other folders)
