[project]
name = "finance"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pedro", email = "87550035+odiseo0@users.noreply.github.com"},
]
dependencies = [
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.39",
    "alembic>=1.15.1",
    "httpx>=0.28.1",
    "litestar>=2.15.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytz>=2025.1",
    "orjson>=3.10.15",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
